backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${K8S_NAMESPACE:-postech-fase2}
  labels:
    name: ${K8S_NAMESPACE:-postech-fase2}
    environment: production
