backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postech-app-ingress
  namespace: postech-fase2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: postech-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postech-app-service
            port:
              number: 80
